--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
         <log4j-version>1.2.17</log4j-version>
         <asm-all-version>5.1</asm-all-version>
         <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
+        <project.scm.id>github-server</project.scm.id>
     </properties>
 
     <dependencies>
