--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!-- TODO: Replace maven-release-plugin with nexus-staging-maven-plugin and maven-versions-plugin -->
+    <!-- TODO: Add maven-versions-plugin for configuring releases -->
+    <!-- TODO: Finish configuring gpg signing (passphrase gpg-agent) -->
+    <!-- TODO: Create release profile (only do signing, javadoc, and sources during release) -->
     <groupId>st.redline</groupId>
     <artifactId>redline</artifactId>
     <version>0.8-SNAPSHOT</version>
@@ -38,13 +40,13 @@
     </developers>
 
     <distributionManagement>
-        <repository>
-            <id>test-server-release</id>
+<!--        <repository>
+            <id>ossrh</id>
             <name>Test Nexus Release Repository</name>
             <url>http://192.168.198.131:8081/repository/maven-releases/</url>
-        </repository>
+        </repository>-->
         <snapshotRepository>
-            <id>test-server-snapshots</id>
+            <id>ossrh</id>
             <name>Test Sonatype Nexus Snapshots</name>
             <url>http://192.168.198.131:8081/repository/maven-snapshots/</url>
         </snapshotRepository>
@@ -63,8 +65,7 @@
         <common-logging-version>1.2</common-logging-version>
         <log4j-version>1.2.17</log4j-version>
         <asm-all-version>5.1</asm-all-version>
-        <maven-release-plugin-version>2.5.3</maven-release-plugin-version>
-        <project.scm.id>github-server</project.scm.id>
+        <nexus-staging-maven-plugin-version>1.6.7</nexus-staging-maven-plugin-version>
         <maven-source-plugin-version>3.0.1</maven-source-plugin-version>
         <maven-javadoc-plugin-version>3.0.0-M1</maven-javadoc-plugin-version>
         <maven-gpg-plugin-version>1.6</maven-gpg-plugin-version>
@@ -191,9 +192,16 @@
                 </executions>
             </plugin>
             <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-release-plugin</artifactId>
-                <version>${maven-release-plugin-version}</version>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>${nexus-staging-maven-plugin-version}</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <!--<nexusUrl>https://oss.sonatype.org/</nexusUrl>-->
+                    <nexusUrl>http://192.168.198.131:8081/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
