[maven-release-plugin] prepare release redline-3.4

--- a/pom.xml
+++ b/pom.xml
@@ -24,9 +24,12 @@
     </licenses>
 
     <scm>
+<!--        <url>https://github.com/TheSecretSquad/stc</url>
+        <developerConnection>scm:git:https://github.com/TheSecretSquad/stc.git</developerConnection>
+        <connection>scm:git:https://github.com/TheSecretSquad/stc.git</connection>-->
         <url>https://github.com/TheSecretSquad/stc</url>
-        <developerConnection>scm:git:git://github.com/TheSecretSquad/stc.git</developerConnection>
-        <connection>scm:git:git://github.com/TheSecretSquad/stc.git</connection>
+        <developerConnection>scm:git:git@github.com:TheSecretSquad/stc.git</developerConnection>
+        <connection>scm:git:git@github.com:TheSecretSquad/stc.git</connection>
     <tag>redline-3.4</tag>
   </scm>
 
