--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <!-- TODO: Create release profile (only do signing, javadoc, and sources during release) -->
     <groupId>st.redline</groupId>
     <artifactId>redline</artifactId>
-    <version>3.4</version>
+    <version>3.5-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>Redline Smalltalk</name>
@@ -30,7 +30,7 @@
         <url>https://github.com/TheSecretSquad/stc</url>
         <developerConnection>scm:git:git@github.com:TheSecretSquad/stc.git</developerConnection>
         <connection>scm:git:git@github.com:TheSecretSquad/stc.git</connection>
-    <tag>redline-3.4</tag>
+    <tag>HEAD</tag>
   </scm>
 
     <developers>
